Temp fix for dashboard z-index

--- a/static/css/app.less
+++ b/static/css/app.less
@@ -16,6 +16,11 @@ body {
 
 }
 
+/* Temp fix for dashboard z-index woes */
+#dashboard-topbar {
+  z-index: 2000;
+}
+
 #topnav {
   margin-bottom: 0;
   top: 25px;
